<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symptom Management</string>
    <string name="sync_account_type" translatable="false">skywomantech.com</string>
    <string name="content_authority" translatable="false">"com.skywomantech.app.symptommanagement"</string>
    <string name="action_settings">Settings</string>
    <string name="pref_enable_auto_login_label">Enable Automatic Login</string>
    <string name="pref_enable_auto_login_key" translatable="false">auto_login</string>
    <string name="pref_enable_auto_login_default" translatable="false">false</string>
    <string name="pref_enable_auto_login_false">Not Enabled</string>
    <string name="pref_enable_auto_login_true">Enabled</string>
    <string name="pref_login_name">Login Id:</string>
    <string name="pref_login_name_key">login_name</string>
    <string name="pref_login_name_default"></string>
    <string name="pref_login_password">Password:</string>
    <string name="pref_login_password_key">password_key</string>
    <string name="pref_login_password_default"></string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Check-In Notifications</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="title_admin_patient_list">Admin Patients</string>
    <string name="title_admin_patient_detail">Admin Patient Details</string>
    <string name="title_admin_physician_list">Admin Physicians</string>
    <string name="title_admin_physician_detail">Admin Physician Details</string>
    <string name="title_activity_admin_main">Admin Main</string>
    <string name="admin_main_title">Symptom\nManagement\nAdministration</string>
    <string name="title_admin_medication_list">Admin Medications</string>
    <string name="admin_medication_edit">Edit</string>
    <string name="admin_medication_delete">Delete</string>
    <string name="admin_medication_add">Add Medication</string>
    <string name="empty_list_text">This List is Empty.</string>
    <string name="title_activity_patient_main">Symptom Management</string>
    <string name="title_activity_pain_log">Pain Logs</string>
    <string name="title_physicianpatient_list">Symptom Management</string>
    <string name="title_physicianpatient_detail">Symptom Management</string>
    <string name="title_activity_medication_list">Medication List</string>
    <string name="title_activity_patient_options">PatientOptionsActivity</string>
    <string name="pref_enable_reminder_snooze">Snooze Reminders</string>
    <string name="pref_enable_reminder_snooze_key">reminder_snooze</string>
    <string name="pref_enable_reminder_snooze_false">Not Enabled</string>
    <string name="pref_enable_reminder_snooze_true">Enabled</string>
    <string name="pref_enable_reminder_snooze_default" translatable="false">false</string>
    <string name="pref_popup_reminder">Pop-Up Reminders</string>
    <string name="pref_popup_reminder_key">reminder_popup</string>
    <string name="pref_popup_reminder_false">Not Enabled</string>
    <string name="pref_popup_reminder_true">Enabled</string>
    <string name="pref_popup_reminder_default" translatable="false">false</string>
    <string name="action_refresh">Sync Data</string>
    <string name="prompt_username">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_patient_charts">Patient Charts</string>
    <string name="hello_world">Hello world!</string>
    <string name="ask_patient_contacted">Did you contact Patient?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="confirm_patient_contacted_title">Confirm Patient Contact</string>
    <string name="patient_contact_status">Patient Contacted by Physician</string>
    <string name="patient_id_key">patient_id</string>
    <string name="physician_id_key">physician_id</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_prescription">Do you want to delete this prescription?</string>
    <string name="callbacks_message">Activity must implement fragment\'s callbacks.</string>
    <string name="medication_add_edit_dialog_tag">med_add_dialog</string>
    <string name="Ok_button_text">Ok</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="check_in_notification_title">SymptomManagement</string>
    <string name="check_in_notification_text">Time to Check-In</string>
    <string name="confirm_reminder_delete_title">Confirm Delete</string>
    <string name="confirm_reminder_delete_message">Do you want to delete this reminder?</string>
    <string name="patient_welcome_message">"Welcome "</string>
    <string name="no_check_ins_today_message">You have not yet checked in today.</string>
    <string name="todays_check_ins_complete_message">Today\'s Check-Ins Complete.</string>
    <string name="med_time_taken_question">When did you take your medication?</string>
    <string name="image_folder_name">SymptomManagement</string>
    <string name="media_file_date_format">yyyyMMdd_HHmmss</string>
    <string name="reminder_configuration_title">Reminder Configuration</string>
    <string name="pain_log_mouth_pain_question">How bad is your mouth pain/sore throat?</string>
    <string name="pain_log_well_controlled">Well-Controlled</string>
    <string name="pain_log_severe">Severe</string>
    <string name="pain_log_moderate">Moderate</string>
    <string name="medication_log_generic_question">Did you take your pain medication?”</string>
    <string name="pain_log_eating_drinking_question">Does your pain stop you from eating or drinking?</string>
    <string name="pain_log_eating_some">Some</string>
    <string name="pain_log_cannot_eat">I cannot eat</string>
    <string name="pain_log_eating">No</string>

</resources>
